generates random bookings, if there is none